<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".activity.main.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/search"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/search_meal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:layout_margin="10dp"
                    android:iconifiedByDefault="false"
                    android:queryHint="@string/search_hint"/>
                <Button
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:layout_margin="10dp"
                    android:text="検索"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginEnd="10dp">
                <TextView
                    android:id="@+id/detailed_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/detailed_search"/>
                <Button
                    android:id="@+id/detailed_button"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/up"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/detailed_contents_area_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/genre_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/genre"/>
                    <TextView
                        android:id="@+id/category_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="aaaaa"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:text="@string/budget"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25">
                        <EditText
                            android:id="@+id/min_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:maxLength="5"
                            android:inputType="number"
                            android:hint="@string/min"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:text="@string/within"/>
                        <EditText
                            android:id="@+id/max_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:maxLength="5"
                            android:inputType="number"
                            android:hint="@string/max"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_weight="0.5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/area" />
                    <Spinner
                        android:id="@+id/Area_spinner"
                        android:layout_weight="0.5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </Spinner>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <CheckBox
                        android:id="@+id/open_check"
                        android:layout_weight="0.5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/open"/>
                    <CheckBox
                        android:id="@+id/student_discout_check"
                        android:layout_weight="0.5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/student_discount"/>
                </LinearLayout>
                <Button
                    android:id="@+id/search_detail_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"/>
            </LinearLayout>
        </LinearLayout>
        <example.android.gakuseimeshi.activity.main.expandLayout.StoreInformationLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/custom_layout1"/>
    </LinearLayout>
</ScrollView>